[package]
name    = "plugin-sdk-rs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
rumqttc    = "0.24"
tokio      = { version = "1", features = ["full"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow     = "1"
tracing    = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry"] }
chrono     = { version = "0.4", features = ["serde"] }
toml       = "0.8"
hc-types   = { path = "../../core/crates/hc-types" }
hc-logging = { path = "../../core/crates/hc-logging" }
